--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
     <h3 class="h3_ws_status"></h3>
     <h4 status_send></h4>
     <hr>
-    <button onclick="send_msg()">Отправить</button>
+    <input class="msg_inp" type="text">
+    <br>
+    <button onclick="send_msg()">Отправить { получить }</button>
     <div class="_chat">
 
     </div>
 
     <style>body{background-color: black;color: rgb(0, 214, 18);text-align: center;font-weight: 100;font-size: 30px;font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}</style>
-    <style>button{width: 11pc;height: 2.20pc;background-color: rgb(0, 80, 13);border: none;color: white;font-size: 16px;border-radius: 12px;}</style>
+    <style>button{width: 13pc;height: 2.50pc;background-color: rgb(0, 80, 13);border: none;color: white;font-size: 16px;border-radius: 12px;}</style>
     <style>button:hover{ cursor: pointer;}</style>
-    <style> button:active{transition: 0.10s; height: 2pc; width: 10.70pc; }</style>
+    <style> button:active{transition: 0.10s; height: 2pc; width: 10.70pc;font-size: 14px;}</style>
+    <style>input{border-radius: 12px;width: 18pc;height: 2pc;box-shadow: 0 0 2px 2px greenyellow;border: none;margin-bottom: 0.50pc;font-size: 19px;}</style>
     <script src="App.js"></script>
 </body>
 </html>
